Add about menu (poznanapi)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="hello">Hello World, GForm!</string>
     <string name="app_name">Grave</string>
+    <string name="description">Wyszukiwarka grobów na poznańskich centarzach. Sprawdź, gdzie dokładnie znajduje się grób poszukiwanej przez Ciebie osoby.\nAplikacja powstała dzięki połączeniu dwóch technologii POZNAN API oraz programu Itiner.</string>
+	<string name="version">Beta@12X2011</string>
 </resources>
