--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Lokalizator grobów</string>
-    <string name="description">
-        Lokalizator grobów to aplikacja mobilna ułatwiająca odnalezienie grobu na poznańskich cmentarzach.\nPo wprowadzeniu imienia i nazwiska i/lub daty urodzenia, śmierci lub pogrzebu osoby zmarłej, lokalizacja mogiły wyświetlana jest na mapie.\nAplikacja, opracowana przez firmę Itiner (http://itiner.pl), opiera się na bazie danych Geopozu, która udostępniana jest w ramach API poznan.pl.
-        </string>
+    <string name="description">        Lokalizator grobów to aplikacja mobilna ułatwiająca odnalezienie grobu na poznańskich cmentarzach.\nPo wprowadzeniu imienia i nazwiska i/lub daty urodzenia, śmierci lub pogrzebu osoby zmarłej, lokalizacja mogiły wyświetlana jest na mapie.\nAplikacja, opracowana przez firmę Itiner (http://itiner.pl), opiera się na bazie danych Geopozu, która udostępniana jest w ramach API poznan.pl.</string>
     <string name="license_txt">Aplikacja jest wydawana na licencji GNU GPLv3 (http://www.gnu.org/copyleft/gpl.html)\nWięcej informacji na stronie: https://bitbucket.org/itiner/lokalizator_grobow/wiki</string>
     <string name="libraries_txt">Nutiteq Map SDK (http://www.nutiteq.com/)\nJava Map Projection Library (http://www.jhlabs.com/java/maps/proj/)</string>
     <string name="query_io_err">Nastąpił błąd podczas próby połączenia. Spróbuj ponownie później.</string>
@@ -19,7 +18,13 @@
     <string name="search">Szukaj</string>
     <string name="check_conn">Brak dostępu do Internetu\nSprawdź swoje połączenie</string>
     <string name="data_api_poznan">Dane: API poznan.pl</string>
-    <string name="born_abv">"ur. "</string>
-    <string name="died_abv">"zm. "</string>
-    <string name="funreal">"pogrzeb "</string>
+    <string name="born_abv">ur.</string>
+    <string name="died_abv">zm.</string>
+    <string name="funreal">pogrzeb</string>
+    <string name="grave">Grób</string>
+    <string name="zoom_map">Przybliż mapę</string>
+    <string name="your_location">Twoja pozycja</string>
+    
+    
+
 </resources>
