Missing values view
--HG--
branch : custom-map

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="poznan_logo_desc">Poznań-logo</string>
     <string name="geopoz_logo_desc">GeoPoz-logo</string>
     <string name="itiner_logo_desc">Itiner-logo</string>
+    <string name="no_data">Brak danych</string>
     
     
 
