--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="geopoz_logo_desc">GeoPoz-logo</string>
     <string name="itiner_logo_desc">Itiner-logo</string>
     <string name="no_data">Brak danych</string>
+    <string name="map_no_connection">Brak połączenia</string>
 </resources>
