--- a/grave_finder_app/res/values/strings.xml
+++ b/grave_finder_app/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="itiner_logo_desc">Itiner-logo</string>
     <string name="no_data">Brak danych</string>
     <string name="map_no_connection">Brak połączenia</string>
+    <string name="downloading_data">Pobieranie danych</string>
 </resources>
