Showing warning about only offline results in ResultsFragment.

--- a/grave_finder_app/res/values/strings.xml
+++ b/grave_finder_app/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="map_no_connection">Brak połączenia</string>
     <string name="downloading_data">Pobieranie danych</string>
     <string name="ok">OK</string>
+    <string name="list_offline_warning">Brak połączenia z internetem. Lista wyników pochodzi z pamięci podręcznej i może być nie pełna.</string>
 </resources>
