--- a/grave_finder_app/res/values/strings.xml
+++ b/grave_finder_app/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="itiner_logo_desc">Itiner-logo</string>
     <string name="no_data">Brak danych</string>
     <string name="no_data_desc">Nie udało się znaleźć wyników dla podanego zapytania.</string>
+    <string name="unexpected_server_err">Serwer zwrócił niepoprawne dane. Sprawdź swoje połączenie. Jeśli problem będzie się powtarzał spróbuj później.</string>
     <string name="map_no_connection">Brak połączenia</string>
     <string name="downloading_data">Pobieranie danych</string>
     <string name="ok">OK</string>
